# one1fy

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
examples/bar/: main.rs
examples/box/: main.rs
examples/calculator/: calc_button.rs  main.rs  screen.rs
examples/checkbox/: main.rs
examples/delete/: main.rs
examples/piano/: main.rs
examples/text/: main.rs
examples/todo/: input.rs  list.rs  main.rs
src/: lib.rs  main.rs
src/framework/: mod.rs
src/framework/components/: bar.rs  box_component.rs  checkbox.rs  mod.rs  text_component.rs
src/orchestrator/: mod.rs  redraw.rs
src/orchestrator/event/: click.rs  keypress.rs  mod.rs
src/platform/: macos.rs  mod.rs  windows.rs
