[package]
name = "one1fy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
windows = ["skia-safe/gl", "skia-safe/d3d"]
macos = ["skia-safe/gl", "skia-safe/gpu"]

[dependencies]
skia-safe = "0.53.0"
glutin = "0.29"
gl = "0.14.0"
cocoa = "0.24.0"
core-graphics-types = "0.1.1"
rand = "0.8.4"
foreign-types-shared = "0.1.1"
winit = "0.27.0"
objc = "0.2.7"
metal-rs = { package = "metal", version = "0.23.1" }
